--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
     <div class="everything">
         <div class="hero" id="background" role="img" aria-label="a colombian flag and a background of houses">
-            <div class="container">
+            <div class="container0">
                 <div class="flag">
                     <h1 class="text" id="title-hero">Visit Colombia</h1>
                     <h2 class="text" id="second-hero">Enjoy the culture and vibrant communities of Colombia</h2>
