--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hometown Page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
     <div class="everything">
-        <div class="hero" id="background" role="img" aria-label="a colombian flag and a background of houses">
-            <div class="container0">
+        <div class="hero guide-show" id="background" role="img" aria-label="a colombian flag and a background of houses">
+            <div class="container">
                 <div class="flag">
                     <h1 class="text" id="title-hero">Visit Colombia</h1>
                     <h2 class="text" id="second-hero">Enjoy the culture and vibrant communities of Colombia</h2>
@@ -21,27 +20,30 @@
                 </div>
             </div>
         </div>
-        <div class="container-activities">
-            <h3 id="intro-activities">Top three activities to do at Colombia</h3>
-            <div class="activities">
-                <div class="columns">
-                    <img src="./images/activity1.jpg" alt="">
-                    <h3 class="underline" id="underline1">Sports</h3>
-                    <p>There is a wide variety on the sports you can do on Colombia</p>
-                </div>
-                <div class="columns">
-                    <img src="./images/activity2.jpg" alt="">
-                    <h3 class="underline" id="underline2">Meet</h3>
-                    <p>Meet new people and learn about their traditions and customs</p>
-                </div>
-                <div class="columns">
-                    <img src="./images/activity3.jpg" alt="">
-                    <h3 class="underline" id="underline3">History</h3>
-                    <p>Learn the history of Colombia and of our ancesters</p>
+        <div class="guide-show">
+            <div class="container-activities">
+                <h3 id="intro-activities">Top three activities to do at Colombia</h3>
+                <div class="activities">
+                    <div class="columns">
+                        <img src="./images/activity1.jpg" alt="">
+                        <h3 class="underline" id="underline1">Sports</h3>
+                        <p>There is a wide variety on the sports you can do on Colombia</p>
+                    </div>
+                    <div class="columns">
+                        <img src="./images/activity2.jpg" alt="">
+                        <h3 class="underline" id="underline2">Meet</h3>
+                        <p>Meet new people and learn about their traditions and customs</p>
+                    </div>
+                    <div class="columns">
+                        <img src="./images/activity3.jpg" alt="">
+                        <h3 class="underline" id="underline3">History</h3>
+                        <p>Learn the history of Colombia and of our ancesters</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="division"></div>
+
+        <div class="division guide-show"></div>
         <div class="container-guide">
             <div class="guide-show">
                 <div class="container2" id="background-card">
@@ -57,7 +59,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
